# label-toolkit

./: .gitignore  .gitmodules  README.md  docker-compose-sam.yml  docker-compose-sam1.yml  docker-compose-sam2-image.yml  docker-compose.yml  pyproject.toml  requirements.txt
config/: .gitignore  config.json  label-template-sam.xml  label-template-sam2.xml  meta_template.json
config/demo_scene/: meta.json
data/my_data/: label_studio.sqlite3
label_toolkit/: LabelStudioHelper.py  Utils.py  utils.py
scripts/: add_project.bat  add_project.ps1  add_project.sh  add_user.bat  add_user.ps1  add_user.sh  config.sh  create_env.sh  generate-env.sh  setup_env.bat  setup_env.ps1  setup_env.sh
tools/: add_project.py  add_user.py  create_user.py  setup_env.py
